# pelican_robot

./: LICENSE  README.md
pelican_base/: CMakeLists.txt  package.xml
pelican_base/config/: firefly.yaml  ueye.yaml
pelican_base/launch/: fcu.launch  firefly.launch  gps.launch  pelican.launch  ueye.launch
pelican_bringup/: CMakeLists.txt  package.xml
pelican_bringup/scripts/: install
pelican_bringup/udev/: 52-ttyusb.rules  README
pelican_robot/: CMakeLists.txt  package.xml
rosinstall/: ncfrn15.rosinstall
