<?xml version="1.0"?>
<package>
  <name>pelican_robot</name>
  <version>0.1.0</version>
  <description>Metapackage for AutonomyLab's Asctec Pelican</description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/AutonomyLab/pelican_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pelican_bringup</run_depend>
  <run_depend>pelican_base</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
